feat: log 삭제